tests/parse-errors/manyErrors.rock
give back 5
break
continue